@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20070510)"
+#define VERSION	"Fourth Edition (20070601)"
